// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionLayout /> tests "BOTTOM" Layout works 1`] = `
<div>
  <div
    class="main"
    id="execution-layout-test"
  >
    <div
      class="resizers"
      style="transform: translateY(232px);"
    >
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 4.125l5.78-3.25 5.806 3.25m-11.586 5l5.78-3.25 5.806 3.25"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 6.125l5.78 2.75 5.806-2.75m-11.586-5l5.78 2.75 5.806-2.75"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="SplitPane splitPane1 horizontal "
      style="display: flex; flex: 1; height: 100%; position: absolute; outline: none; overflow: hidden; user-select: text; bottom: 0px; flex-direction: column; min-height: 100%; top: 0px; width: 100%;"
    >
      <div
        class="Pane horizontal Pane1  "
        style="flex: 0 0 auto; position: relative; outline: none; height: 250px; display: flex;"
      >
        <div
          class="Pane  pane11"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            data-testid="child-1"
          >
            Child 1
          </div>
        </div>
      </div>
      <span
        class="Resizer horizontal "
        role="presentation"
      />
      <div
        class="Pane horizontal Pane2  "
        style="flex: 1; position: relative; outline: none;"
      >
        <div
          class="Pane  pane12"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            class="SplitPane splitPane2 horizontal "
            style="display: flex; flex: 1; height: 100%; position: absolute; outline: none; overflow: hidden; user-select: text; bottom: 0px; flex-direction: column; min-height: 100%; top: 0px; width: 100%;"
          >
            <div
              class="Pane horizontal Pane1  "
              style="flex: 0 0 auto; position: relative; outline: none; height: 300px; display: flex;"
            >
              <div
                class="Pane  pane21"
                style="flex: 1; position: relative; outline: none;"
              >
                <div
                  data-testid="child-2"
                >
                  Child 2
                </div>
              </div>
            </div>
            <span
              class="Resizer horizontal "
              role="presentation"
            />
            <div
              class="Pane horizontal Pane2  "
              style="flex: 1; position: relative; outline: none;"
            >
              <div
                class="Pane  pane22"
                style="flex: 1; position: relative; outline: none;"
              >
                <div
                  data-testid="child-3"
                >
                  Child 3
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionLayout /> tests "FLOATING" Layout - toggle window works: Child 3 is not shown 1`] = `
<div>
  <div
    class="main"
    id="execution-layout-test"
  >
    <div
      class="resizers"
      style="transform: translateY(232px);"
    >
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 4.125l5.78-3.25 5.806 3.25m-11.586 5l5.78-3.25 5.806 3.25"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 6.125l5.78 2.75 5.806-2.75m-11.586-5l5.78 2.75 5.806-2.75"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="SplitPane splitPane1 horizontal "
      style="display: flex; flex: 1; height: 100%; position: absolute; outline: none; overflow: hidden; user-select: text; bottom: 0px; flex-direction: column; min-height: 100%; top: 0px; width: 100%;"
    >
      <div
        class="Pane horizontal Pane1  "
        style="flex: 0 0 auto; position: relative; outline: none; height: 250px; display: flex;"
      >
        <div
          class="Pane  pane11"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            data-testid="child-1"
          >
            Child 1
          </div>
        </div>
      </div>
      <span
        class="Resizer horizontal "
        role="presentation"
      />
      <div
        class="Pane horizontal Pane2  "
        style="flex: 1; position: relative; outline: none;"
      >
        <div
          class="Pane  pane12"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            data-testid="child-2"
          >
            Child 2
          </div>
          <div
            class="floatingView"
            data-state="floating"
          >
            <div
              class="stepDetails draggable react-draggable"
              style="transform: translate(-40px,-30px);"
            >
              <span>
                Step Details
              </span>
              <button
                class="bp3-button bp3-disabled bp3-loading bp3-minimal bp3-small StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <div
                  class="bp3-spinner bp3-button-spinner"
                >
                  <div
                    class="bp3-spinner-animation"
                  >
                    <svg
                      height="20"
                      stroke-width="16.00"
                      viewBox="-3.00 -3.00 106.00 106.00"
                      width="20"
                    >
                      <path
                        class="bp3-spinner-track"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      />
                      <path
                        class="bp3-spinner-head"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                        pathLength="280"
                        stroke-dasharray="280 280"
                        stroke-dashoffset="210"
                      />
                    </svg>
                  </div>
                </div>
                <span
                  class="bp3-icon bp3-icon-plus StyledProps--main"
                  icon="plus"
                >
                  <svg
                    data-icon="plus"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      plus
                    </desc>
                    <path
                      d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionLayout /> tests "FLOATING" Layout - toggle window works: Child 3 is shown 1`] = `
<div>
  <div
    class="main"
    id="execution-layout-test"
  >
    <div
      class="resizers"
      style="transform: translateY(232px);"
    >
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 4.125l5.78-3.25 5.806 3.25m-11.586 5l5.78-3.25 5.806 3.25"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 6.125l5.78 2.75 5.806-2.75m-11.586-5l5.78 2.75 5.806-2.75"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="SplitPane splitPane1 horizontal "
      style="display: flex; flex: 1; height: 100%; position: absolute; outline: none; overflow: hidden; user-select: text; bottom: 0px; flex-direction: column; min-height: 100%; top: 0px; width: 100%;"
    >
      <div
        class="Pane horizontal Pane1  "
        style="flex: 0 0 auto; position: relative; outline: none; height: 250px; display: flex;"
      >
        <div
          class="Pane  pane11"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            data-testid="child-1"
          >
            Child 1
          </div>
        </div>
      </div>
      <span
        class="Resizer horizontal "
        role="presentation"
      />
      <div
        class="Pane horizontal Pane2  "
        style="flex: 1; position: relative; outline: none;"
      >
        <div
          class="Pane  pane12"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            data-testid="child-2"
          >
            Child 2
          </div>
          <div
            class="floatingView"
            data-state="floating"
          >
            <div
              class="stepDetails react-draggable"
              style="transform: translate(-40px,-30px);"
            >
              <span>
                Step Details
              </span>
              <button
                class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-minus StyledProps--main"
                  icon="minus"
                >
                  <svg
                    data-icon="minus"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      minus
                    </desc>
                    <path
                      d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="floating-wrapper"
              style="position: absolute; left: 0px; top: 0px;"
            >
              <div
                data-testid="child-3"
              >
                Child 3
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionLayout /> tests "FLOATING" Layout works 1`] = `
<div>
  <div
    class="main"
    id="execution-layout-test"
  >
    <div
      class="resizers"
      style="transform: translateY(232px);"
    >
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 4.125l5.78-3.25 5.806 3.25m-11.586 5l5.78-3.25 5.806 3.25"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 6.125l5.78 2.75 5.806-2.75m-11.586-5l5.78 2.75 5.806-2.75"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="SplitPane splitPane1 horizontal "
      style="display: flex; flex: 1; height: 100%; position: absolute; outline: none; overflow: hidden; user-select: text; bottom: 0px; flex-direction: column; min-height: 100%; top: 0px; width: 100%;"
    >
      <div
        class="Pane horizontal Pane1  "
        style="flex: 0 0 auto; position: relative; outline: none; height: 250px; display: flex;"
      >
        <div
          class="Pane  pane11"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            data-testid="child-1"
          >
            Child 1
          </div>
        </div>
      </div>
      <span
        class="Resizer horizontal "
        role="presentation"
      />
      <div
        class="Pane horizontal Pane2  "
        style="flex: 1; position: relative; outline: none;"
      >
        <div
          class="Pane  pane12"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            data-testid="child-2"
          >
            Child 2
          </div>
          <div
            class="floatingView"
            data-state="floating"
          >
            <div
              class="stepDetails react-draggable"
              style="transform: translate(-40px,-30px);"
            >
              <span>
                Step Details
              </span>
              <button
                class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-minus StyledProps--main"
                  icon="minus"
                >
                  <svg
                    data-icon="minus"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      minus
                    </desc>
                    <path
                      d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="floating-wrapper"
              style="position: absolute; left: 0px; top: 0px;"
            >
              <div
                data-testid="child-3"
              >
                Child 3
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionLayout /> tests "RIGHT" Layout works 1`] = `
<div>
  <div
    class="main"
    id="execution-layout-test"
  >
    <div
      class="resizers"
      style="transform: translateY(232px);"
    >
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 4.125l5.78-3.25 5.806 3.25m-11.586 5l5.78-3.25 5.806 3.25"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 6.125l5.78 2.75 5.806-2.75m-11.586-5l5.78 2.75 5.806-2.75"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="SplitPane splitPane1 horizontal "
      style="display: flex; flex: 1; height: 100%; position: absolute; outline: none; overflow: hidden; user-select: text; bottom: 0px; flex-direction: column; min-height: 100%; top: 0px; width: 100%;"
    >
      <div
        class="Pane horizontal Pane1  "
        style="flex: 0 0 auto; position: relative; outline: none; height: 250px; display: flex;"
      >
        <div
          class="Pane  pane11"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            data-testid="child-1"
          >
            Child 1
          </div>
        </div>
      </div>
      <span
        class="Resizer horizontal "
        role="presentation"
      />
      <div
        class="Pane horizontal Pane2  "
        style="flex: 1; position: relative; outline: none;"
      >
        <div
          class="Pane  pane12"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            class="SplitPane splitPane2 vertical "
            style="display: flex; flex: 1; height: 100%; position: absolute; outline: none; overflow: hidden; user-select: text; flex-direction: row; left: 0px; right: 0px;"
          >
            <div
              class="Pane vertical Pane1  "
              style="flex: 1; position: relative; outline: none;"
            >
              <div
                class="Pane  pane21"
                style="flex: 1; position: relative; outline: none;"
              >
                <div
                  data-testid="child-2"
                >
                  Child 2
                </div>
              </div>
            </div>
            <span
              class="Resizer vertical "
              role="presentation"
            />
            <div
              class="Pane vertical Pane2  "
              style="flex: 0 0 auto; position: relative; outline: none; width: 500px;"
            >
              <div
                class="Pane  pane22"
                style="flex: 1; position: relative; outline: none;"
              >
                <div
                  data-testid="child-3"
                >
                  Child 3
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionLayout /> tests Does not render third child by default 1`] = `
<div>
  <div
    class="main"
    id="execution-layout-test"
  >
    <div
      class="resizers"
      style="transform: translateY(232px);"
    >
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 4.125l5.78-3.25 5.806 3.25m-11.586 5l5.78-3.25 5.806 3.25"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 6.125l5.78 2.75 5.806-2.75m-11.586-5l5.78 2.75 5.806-2.75"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="SplitPane splitPane1 horizontal "
      style="display: flex; flex: 1; height: 100%; position: absolute; outline: none; overflow: hidden; user-select: text; bottom: 0px; flex-direction: column; min-height: 100%; top: 0px; width: 100%;"
    >
      <div
        class="Pane horizontal Pane1  "
        style="flex: 0 0 auto; position: relative; outline: none; height: 250px; display: flex;"
      >
        <div
          class="Pane  pane11"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            data-testid="child-1"
          >
            Child 1
          </div>
        </div>
      </div>
      <span
        class="Resizer horizontal "
        role="presentation"
      />
      <div
        class="Pane horizontal Pane2  "
        style="flex: 1; position: relative; outline: none;"
      >
        <div
          class="Pane  pane12"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            data-testid="child-2"
          >
            Child 2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionLayout /> tests ExecutionLayout.Toggle works 1`] = `
<div>
  <div
    class="main"
    id="execution-layout-test"
  >
    <div
      class="resizers"
      style="transform: translateY(232px);"
    >
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 4.125l5.78-3.25 5.806 3.25m-11.586 5l5.78-3.25 5.806 3.25"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 6.125l5.78 2.75 5.806-2.75m-11.586-5l5.78 2.75 5.806-2.75"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="SplitPane splitPane1 horizontal "
      style="display: flex; flex: 1; height: 100%; position: absolute; outline: none; overflow: hidden; user-select: text; bottom: 0px; flex-direction: column; min-height: 100%; top: 0px; width: 100%;"
    >
      <div
        class="Pane horizontal Pane1  "
        style="flex: 0 0 auto; position: relative; outline: none; height: 250px; display: flex;"
      >
        <div
          class="Pane  pane11"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            data-testid="child-1"
          >
            Child 1
          </div>
        </div>
      </div>
      <span
        class="Resizer horizontal "
        role="presentation"
      />
      <div
        class="Pane horizontal Pane2  "
        style="flex: 1; position: relative; outline: none;"
      >
        <div
          class="Pane  pane12"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            class="SplitPane splitPane2 vertical "
            style="display: flex; flex: 1; height: 100%; position: absolute; outline: none; overflow: hidden; user-select: text; flex-direction: row; left: 0px; right: 0px;"
          >
            <div
              class="Pane vertical Pane1  "
              style="flex: 1; position: relative; outline: none;"
            >
              <div
                class="Pane  pane21"
                style="flex: 1; position: relative; outline: none;"
              >
                <div
                  data-testid="child-2"
                >
                  <div
                    class="toggle"
                  >
                    <label
                      class="label"
                      title="Align right"
                    >
                      <input
                        checked=""
                        name="layout"
                        type="radio"
                        value="RIGHT"
                      />
                      <span
                        class="bp3-icon StyledProps--main"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 4.233 4.233"
                          width="16"
                        >
                          <g
                            transform="translate(0 .423) scale(.21167)"
                          >
                            <rect
                              fill="#f2f2f2"
                              height="15"
                              rx="0.5"
                              stroke="#9ea9b4"
                              width="19"
                              x="0.5"
                              y="0.5"
                            />
                            <path
                              d="M12 1h7v14h-7z"
                              fill="#9ea9b4"
                            />
                          </g>
                        </svg>
                      </span>
                    </label>
                    <label
                      class="label"
                      title="Align bottom"
                    >
                      <input
                        name="layout"
                        type="radio"
                        value="BOTTOM"
                      />
                      <span
                        class="bp3-icon StyledProps--main"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 4.233 4.233"
                          width="16"
                        >
                          <g
                            fill="none"
                            transform="matrix(.21166 0 0 .21166 0 .423)"
                          >
                            <rect
                              fill="#f2f2f2"
                              height="15"
                              rx="0.5"
                              stroke="#9ea9b4"
                              width="19"
                              x="0.5"
                              y="0.5"
                            />
                            <path
                              d="M1 10h18v5H1z"
                              fill="#9ea9b4"
                            />
                          </g>
                        </svg>
                      </span>
                    </label>
                    <label
                      class="label"
                      title="Align floating"
                    >
                      <input
                        name="layout"
                        type="radio"
                        value="FLOATING"
                      />
                      <span
                        class="bp3-icon StyledProps--main"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 4.233 4.233"
                          width="16"
                        >
                          <g
                            fill="none"
                            transform="translate(0 .403) scale(.20982)"
                          >
                            <rect
                              fill="#000"
                              fill-opacity="0.05"
                              height="16.333"
                              rx="1"
                              width="20.176"
                            />
                            <rect
                              height="15.333"
                              rx="0.5"
                              stroke="#66798b"
                              stroke-opacity="0.6"
                              width="19.176"
                              x="0.5"
                              y="0.5"
                            />
                            <path
                              d="M9.303 3a1 1 0 011-1h7a1 1 0 011 1v9a1 1 0 01-1 1h-7a1 1 0 01-1-1zM14.303 14.5a.5.5 0 01.5-.5h3a.5.5 0 110 1h-3a.5.5 0 01-.5-.5z"
                              fill="#9ea9b4"
                            />
                          </g>
                        </svg>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <span
              class="Resizer vertical "
              role="presentation"
            />
            <div
              class="Pane vertical Pane2  "
              style="flex: 0 0 auto; position: relative; outline: none; width: 500px;"
            >
              <div
                class="Pane  pane22"
                style="flex: 1; position: relative; outline: none;"
              >
                <div
                  data-testid="child-3"
                >
                  Child 3
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionLayout /> tests Showing third child works 1`] = `
<div>
  <div
    class="main"
    id="execution-layout-test"
  >
    <div
      class="resizers"
      style="transform: translateY(232px);"
    >
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 4.125l5.78-3.25 5.806 3.25m-11.586 5l5.78-3.25 5.806 3.25"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--iconOnly StyledProps--main"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
        >
          <svg
            height="12"
            viewBox="0 0 14 10"
            width="12"
          >
            <path
              d="M1.207 6.125l5.78 2.75 5.806-2.75m-11.586-5l5.78 2.75 5.806-2.75"
              fill="none"
              stroke="#3E7BFA"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="SplitPane splitPane1 horizontal "
      style="display: flex; flex: 1; height: 100%; position: absolute; outline: none; overflow: hidden; user-select: text; bottom: 0px; flex-direction: column; min-height: 100%; top: 0px; width: 100%;"
    >
      <div
        class="Pane horizontal Pane1  "
        style="flex: 0 0 auto; position: relative; outline: none; height: 250px; display: flex;"
      >
        <div
          class="Pane  pane11"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            data-testid="child-1"
          >
            Child 1
          </div>
        </div>
      </div>
      <span
        class="Resizer horizontal "
        role="presentation"
      />
      <div
        class="Pane horizontal Pane2  "
        style="flex: 1; position: relative; outline: none;"
      >
        <div
          class="Pane  pane12"
          style="flex: 1; position: relative; outline: none;"
        >
          <div
            class="SplitPane splitPane2 vertical "
            style="display: flex; flex: 1; height: 100%; position: absolute; outline: none; overflow: hidden; user-select: text; flex-direction: row; left: 0px; right: 0px;"
          >
            <div
              class="Pane vertical Pane1  "
              style="flex: 1; position: relative; outline: none;"
            >
              <div
                class="Pane  pane21"
                style="flex: 1; position: relative; outline: none;"
              >
                <div
                  data-testid="child-2"
                >
                  <button
                    data-testid="layout"
                  >
                    Show Child 3
                  </button>
                </div>
              </div>
            </div>
            <span
              class="Resizer vertical "
              role="presentation"
            />
            <div
              class="Pane vertical Pane2  "
              style="flex: 0 0 auto; position: relative; outline: none; width: 500px;"
            >
              <div
                class="Pane  pane22"
                style="flex: 1; position: relative; outline: none;"
              >
                <div
                  data-testid="child-3"
                >
                  Child 3
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
